objects/Beer_Order__c.object
<CustomObject>
    <fields>
        <fullName>Beer__c</fullName>
        <label>Beer</label>
        <referenceTo>Beer__c</referenceTo>
        <relationshipLabel>Beer Orders</relationshipLabel>
        <relationshipName>Beer_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Same_as_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Same as Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Beer_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Beer Order</label>
    <nameField>
        <displayFormat>ORD - {000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beer Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>